<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.freelancing.ahmed.quizapp.TutorialActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tutorialimage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/largemargin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/default2"
            android:layout_marginTop="@dimen/defaultmargin"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/harrydescTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutorialimage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/defaultmargin"
            android:layout_marginEnd="@dimen/defaultmargin"
            android:layout_marginStart="@dimen/defaultmargin"
            android:gravity="center"
            android:text="@string/splashTxt"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/harrydesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/harrydescTitle"
            android:layout_marginBottom="@dimen/defaultmargin"
            android:layout_marginEnd="@dimen/defaultmargin"
            android:layout_marginStart="@dimen/defaultmargin"
            android:gravity="start"
            android:text="@string/harrydesc"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/eighteen"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readdy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/harrydesc"
            android:layout_marginBottom="@dimen/default2"
            android:layout_marginTop="@dimen/default2"
            android:gravity="center"
            android:text="@string/ready"
            android:textColor="@android:color/black"
            android:textSize="@dimen/twenty"
            android:textStyle="bold" />

        <Button
            android:id="@+id/startbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/readdy"
            android:layout_marginBottom="@dimen/default2"
            android:layout_marginEnd="@dimen/defaultmargin"
            android:layout_marginStart="@dimen/defaultmargin"
            android:layout_marginTop="@dimen/defaultmargin"
            android:background="@color/btncolor"
            android:text="@string/btnstart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twentythree" />
    </RelativeLayout>
</ScrollView>
